# claude-code-web-demo

./: .gitignore  AGENTS.md  CLAUDE.md  DEV_CHECKLIST.md  DOCS.md  LAUNCH.md  README.md  SEED_CLAUDE.md  index.html  package-lock.json  package.json  pyproject.toml  style.css  vite.config.ts
docs/: README.md
docs/adr/: 001-architecture-overview.md  002-storage-tiers.md  003-schema-layers.md  004-lambda-strategy.md  005-orchestration.md  006-single-repo.md  007-dynamodb-single-table.md  008-graphql-default.md  009-terraform-governance.md  (+15 more)
migrations/: 001_shopify_orders.sql  002_gorgias_tickets.sql  003_stream_cursors.sql  004_shopify_customers.sql  005_shopify_products.sql  006_shopify_inventory.sql  007_shopify_refunds.sql  008_shopify_transactions.sql
scripts/: build_lambda_package.sh  dual_ai_checker.py  fix-dist.js  gorgias_probe.py  gorgias_probe_matrix.py  register_shopify_webhooks.py  seed_from_brandhaus.py
slide-engine/: ARCH_MAP.md  CLAUDE.md  CONTENT_GUIDE.md  KNOWLEDGE.md  README.md  SLIDE_TYPES.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json
soleil-dashboard/: index.html
src/: App.tsx  app.js  slides.js  state.js
streams/: gorgias-tickets.yaml  shopify-customers.yaml  shopify-inventory.yaml  shopify-orders.yaml  shopify-products.yaml
support-console/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  style.css
tests/: conftest.py  test_e2e_local.py  test_gorgias.py  test_idempotency.py  test_initializer.py  test_runtime_bootstrap.py  test_stream_config.py  test_stream_runner.py  test_transforms.py
(+150 files in other folders)
