[project]
name = "data-streams"
version = "0.12.0"
description = "Serverless data ingestion platform — Vendor API → S3 → Processor → Postgres"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "boto3>=1.34",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[s3,dynamodb,ssm]>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
